Split active and inactive meds